--- a/cinder-install.yaml
+++ b/cinder-install.yaml
@@ -87,6 +87,31 @@ data:
 
     [filter:authtoken]
     paste.filter_factory = keystonemiddleware.auth_token:filter_factory
+  rootwrap.conf: |
+    [DEFAULT]
+    # List of directories to load filter definitions from (separated by ',').
+    # These directories MUST all be only writeable by root !
+    filters_path=/etc/cinder/rootwrap.d,/usr/share/cinder/rootwrap
+
+    # List of directories to search executables in, in case filters do not
+    # explicitely specify a full path (separated by ',')
+    # If not specified, defaults to system PATH environment variable.
+    # These directories MUST all be only writeable by root !
+    exec_dirs=/sbin,/usr/sbin,/bin,/usr/bin,/usr/local/bin,/usr/local/sbin,/usr/lpp/mmfs/bin
+
+    # Enable logging to syslog
+    # Default value is False
+    use_syslog=False
+
+    # Which syslog facility to use.
+    # Valid values include auth, authpriv, syslog, local0, local1...
+    # Default value is 'syslog'
+    syslog_log_facility=syslog
+
+    # Which messages to log.
+    # INFO means log all usage
+    # ERROR means only log unsuccessful attempts
+    syslog_log_level=ERROR
   cinder.conf: |
     [DEFAULT]
     rootwrap_config = /etc/cinder/rootwrap.conf
@@ -425,6 +450,10 @@ spec:
               mountPath: /etc/cinder/policy.json
               subPath: policy.json
               readOnly: true
+            - name: config-volume
+              mountPath: /etc/cinder/rootwrap.conf
+              subPath: rootwrap.conf
+              readOnly: true
         - name: cinder-scheduler
           image: docker.io/openstackhelm/cinder:2024.1-ubuntu_jammy
           command:
@@ -450,6 +479,10 @@ spec:
             - name: config-volume
               mountPath: /etc/cinder/policy.json
               subPath: policy.json
+              readOnly: true
+            - name: config-volume
+              mountPath: /etc/cinder/rootwrap.conf
+              subPath: rootwrap.conf
               readOnly: true
         - name: cinder-volume
           image: docker.io/openstackhelm/cinder:2024.1-ubuntu_jammy
@@ -480,6 +513,10 @@ spec:
             - name: config-volume
               mountPath: /etc/cinder/policy.json
               subPath: policy.json
+              readOnly: true
+            - name: config-volume
+              mountPath: /etc/cinder/rootwrap.conf
+              subPath: rootwrap.conf
               readOnly: true
       volumes:
         - name: config-volume
